test/Fail/Erased-cubical-Open-public/Erased.agda
{-# OPTIONS --erased-cubical #-}

module Erased-cubical-Open-public.Erased (_ : Set₁) where

postulate
  A : Set
